# Scaffold

./: .gitmodules  CMakeLists.txt
Source/: Config.cpp  Config.h  SubCommands.h  Utils.cpp  Utils.h  main.cpp
Source/Utils/: Log.cpp  Log.h
Source/subcommands/: Create.cpp  ListGlobalVars.cpp  ListTemplates.cpp  SetGlobalVars.cpp  SetTemplateDir.cpp
